# DummyMessenger

./: .env  README.md  pyproject.toml
src/: Client.py  Server.py  logger.py
src/db/: models.py  schemas.py
